# finsightdeep_mctx_enterprise

./: .env.backend  .env.docker  .env.nvidia  .gitignore  .pre-commit-config.yaml  BACKEND_DOCKER.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  DOCKER_README.md  DOCKER_SETUP.md  Dockerfile  LAUNCHPAD_README.md  NVIDIA_BLUEPRINT.md  NVIDIA_LAUNCHPAD.md  NVIDIA_README.md  README-DOCKER.md  README.md  blueprint.md  blueprint.yaml  brev.yaml  deploy-nvidia.sh  docker-build.sh  docker-compose  docker-compose.backend.yml  docker-compose.brev.yml  docker-compose.launchpad.yml  docker-compose.nvidia-blueprint.yml  docker-compose.nvidia.yml  docker-compose.yml  launchpad-setup.sh  prometheus.yml  pyproject.toml  remove_nonproduction_files.sh  requirements.txt  run-backend.sh  run-nvidia-blueprint.sh  setup.py  test-backend-deployment.sh  test-docker-deployment.sh
.github/workflows/: gpu-ci.yml
api/: requirements.txt
api/app/: README.md  main.py  test_main.py
api/app/core/: __init__.py  auth.py  config.py  exceptions.py  (+3 more)
config/: .env.example  distribution.yaml
config/docker/: README.md  blue-green.yml  cloud.yml  development.yml  gpu-basic.yml  gpu-production.yml
config/nginx/: nginx.conf
config/prometheus/: blue-green.yml  cloud.yml  development.yml  gpu.yml  production.yml
deployment/: .env.example  DEPLOYMENT.md  README.md  docker-compose.yml
deployment/fastapi/: docker-compose.yml  main.py  prometheus.yml
deployment/vercel/: README.md
docker/: Dockerfile.nvidia  Dockerfile.nvidia.optimized  Dockerfile.vercel  README.md  blue-green-deployment.yml  entrypoint-vercel.sh  entrypoint.sh  fix-readme.sh  setup-docs.sh  vercel.json
docker/api/: main.py
docker/nginx/: nginx.conf
docs/: NVIDIA_DEPLOYMENT_GUIDE.md  T4_OPTIMIZATION_GUIDE.md  deployment.md  hana_integration.md  industry_solutions.md  large_tree_memory_optimization.md  visualization.md
docs/api/: README.md
docs/architecture/: COMPONENT_GUIDE.md  IMPLEMENTATION_NOTES.md  JONY_FRONT_END.md
docs/docker/: OVERVIEW.md  SETUP.md
enterprise/: README.md
examples/: cpu_gpu_benchmark.py  enhanced_distributed_demo.py  hana_integration_demo.py  interactive_visualization.py  mcts_service_demo.py  memory_optimization_demo.py  monitoring_demo.py  t4_optimization_demo.py
frontend/: Dockerfile  package.json
kubernetes/: gpu-operator.yaml
mctx/: __init__.py
mctx/_src/: distributed.py  distributed_gpu.py  enhanced_distributed.py  t4_memory_optimizations.py  t4_optimizations.py  t4_search.py  t4_tensor_cores.py
mctx/enterprise/: __init__.py  batched_serialization.py  enhanced_hana_integration.py  hana_integration.py  hana_management.py  hana_query_cache.py  incremental_loader.py
mctx/monitoring/: README.md  __init__.py  cli.py  metrics.py  profiler.py  visualization.py
requirements/: consolidated_requirements.txt  requirements_enterprise.txt
scripts/: check-health.sh  deploy-nvidia.sh  hana_performance_optimizations.sql  test-docker-deployment.sh
src/: __init__.py
src/aiq/: __init__.py
tests/: test_gpu_optimizations.py
(+92 files in other folders)
